--- a/src/components/accounts/summoner.css
+++ b/src/components/accounts/summoner.css
@@ -1,8 +1,99 @@
-.match{
+.search-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0f0f0;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 60%;
+    margin: 0 auto;
+  }
+  
+  .search-bar input{
+    padding: 8px;
+    margin-right: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+
+  .search-bar select {
+    padding: 8px;
+    margin-right: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+  
+  .search-bar button {
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .search-bar button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
+  
+  .search-bar button:hover {
+    background-color: #0056b3;
+  }
+  
+
+  .profile-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    width: 60%;
+    margin: 0 auto;
+  }
+  
+  .profile-icon {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%; 
+  }
+  
+  .profile-info-container {
+    flex-grow: 1;
+    margin-left: 20px;
+  }
+  
+  .profile-data{
+    display: flex;
+  }
+
+  .ranked-icon {
+    width: 50px;
+    height: auto;
+  }
+  
+
+.history-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+  .match{
     display: flex;
     margin-bottom: 60px;
     padding: 20px;
     width: 70vw;
+}
+
+.blue-background{
+  background-color: #0051ff88;
+}
+
+.red-background{
+  background-color: #ff00228a;
 }
 
 .participants-container {
@@ -19,18 +110,16 @@
   
 .champion-icon{
     height: 20px;
+    border-radius: 50%;
+
 }
+
+
 
 .bold-name{
     font-weight: bold;
 }
-.blue-background{
-    background-color: #5383e8;
-}
 
-.red-background{
-    background-color: #e84057;
-}
 
 .profileIcon{
     width: 50px;
@@ -38,6 +127,8 @@
 
 .champion{
     height: 50px;
+    border-radius: 50%;
+
 }
 .items{
     height: 30px;
